<resources>
    <string name="app_name" translatable="false">Karmkand</string>
    <string name="header">कर्मकांड</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="test_device_id" translatable="false">52A7EA50E2EA18D25669686B04F964C2</string>
    <string name="internet_error">Internet not available.</string>
    <string name="drawer_title_more_apps">More Apps</string>
    <string name="drawer_title_ratting">Rate</string>
    <string name="drawer_title_share_friend">Share</string>
    <string name="drawer_policy">Privacy Policy</string>
    <string name="drawer_ad_privacy">Ad Privacy Settings</string>
    <string name="drawer_title_change_language">Change Language</string>
    <string name="language_dialog_title">Choose Language</string>
    <string name="fallback_list_item">Item</string>
    <string name="fallback_section_title">Section</string>
    <string name="fallback_content_unavailable">Content unavailable.</string>
    <string name="share_app_message">Experience sacred Vedic rituals, mantras, and aartis with %1$s. Download now from Google Play:\n%2$s</string>
    <string name="share_chooser_title">Share using</string>
    <string name="empty_state_title">No Content Available</string>
    <string name="empty_state_desc">Content for this section is currently unavailable. Please select another category.</string>
    <string name="nav_header_subtitle">॥ धर्मो रक्षति रक्षितः ॥</string>
    <string name="category_aarti">आरती</string>
    <string name="category_avahan">आवाहन</string>
    <string name="category_hom">होम</string>
    <string name="category_mantra">मंत्र</string>
    <string name="category_rajopachar_puja">राजोपचार पूजा</string>
    <string name="category_sandhya_vidhi">संध्या विधि</string>
    <string name="greeting_morning">प्रातः काल वंदन</string>
    <string name="greeting_afternoon">शुभ मध्याह्न</string>
    <string name="greeting_evening">शुभ संध्या</string>
    <string name="greeting_night">शुभ रात्रि</string>
    <string name="app_subtitle">वैदिक मन्त्र एवं पूजा संग्रह</string>
    <string name="search_hint">मन्त्र, आरती या विधि खोजें...</string>
    <string name="search_title">खोज परिणाम</string>
    <string name="search_no_results">कोई परिणाम नहीं मिला</string>
    <string name="search_query_prompt">खोजने के लिए शब्द लिखें...</string>
    <string name="daily_mantra_title">दैनिक मन्त्र</string>
    <string name="daily_mantra_tag">॥ गायत्री मन्त्र ॥</string>
    <string name="daily_mantra_text">ॐ भूर्भुवः स्वः तत्सवितुर्वरेण्यं भर्गो देवस्य धीमहि धियो यो नः प्रचोदयात् ॥</string>
    <string name="daily_mantra_meaning">उस प्राणस्वरूप, दुःखनाशक, सुखस्वरूप, श्रेष्ठ परमात्मा का हम ध्यान करें, वह हमारी बुद्धि को सन्मार्ग में प्रेरित करे।</string>
    <string name="action_japa_counter">जप माला</string>
    <string name="action_read">पढ़ें</string>
    <string name="action_font_size">अक्षर आकार</string>
    <string name="action_favorite">संग्रह</string>
    <string name="action_copy">कॉपी</string>
    <string name="action_share">साझा करें</string>
    <string name="nav_home">मुख्य</string>
    <string name="nav_mantra">मन्त्र</string>
    <string name="nav_aarti">आरती</string>
    <string name="nav_saved">संग्रह</string>
    <string name="japa_title">॥ श्री जप माला ॥</string>
    <string name="japa_count_format">%1$d / %2$d</string>
    <string name="japa_rounds">माला चक्र: %1$d</string>
    <string name="japa_reset">पुनः प्रारम्भ</string>
    <string name="japa_completed_msg">॥ ॐ नमः शिवाय ॥\nमाला पूर्ण हुई! १०८ जप सम्पन्न!</string>
    <string name="copied_toast">मन्त्र क्लिपबोर्ड पर कॉपी किया गया</string>
    <string name="saved_toast">संग्रह में जोड़ा गया</string>
    <string name="removed_toast">संग्रह से हटाया गया</string>
    <string name="category_desc_sandhya">१० नित्य विधि</string>
    <string name="category_desc_mantra">५२ वैदिक मन्त्र</string>
    <string name="category_desc_hom">हवन एवं आहुति</string>
    <string name="category_desc_aarti">२६ आरतियाँ</string>
    <string name="category_desc_avahan">देव आवाहन</string>
    <string name="category_desc_rajopchar">षोडशोपचार पूजा</string>
    <string name="tab_favorites_empty_title">कोई संग्रह नहीं मिला</string>
    <string name="tab_favorites_empty_desc">किसी भी मन्त्र या आरती पर दिल के चिह्न (♥) को दबाकर यहाँ सुरक्षित करें।</string>
    <string name="market_link" translatable="false">"market://search?q=pub:Matangi+Developer"</string>
    <string name="market_link_2" translatable="false">"https://play.google.com/store/apps/developer?id=Matangi+Developer"</string>
    <string-array name="rudri_adhayay_list">
        <item>प्रथम अध्याय</item>
        <item>द्वितीय अध्याय</item>
        <item>तृतीय अध्याय</item>
        <item>चतुर्थ अध्याय</item>
        <item>पंचम अध्याय</item>
        <item>षष्ठम अध्याय</item>
        <item>सप्तम अध्याय</item>
        <item>अष्टम अध्याय</item>
        <item>शान्त्यध्यायः</item>
        <item>स्वस्तिप्रार्थना मन्त्राध्यायः</item>
    </string-array>
    <string-array name="sandhya_topics">
        <item>तिलक धारण</item>
        <item>पवित्रीधारण</item>
        <item>जप विधि</item>
        <item>संध्या का समय</item>
        <item>संध्या स्तुति</item>
        <item>संध्योपासना विधि</item>
        <item>सूर्यार्घ्य विधि</item>
        <item>गायत्री ध्यान</item>
        <item>मध्याह्न संध्या</item>
        <item>सायं संध्या</item>
    </string-array>
</resources>