<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="186dp"
    android:background="@drawable/bg_spiritual_gradient"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingStart="@dimen/spacing_lg"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/spacing_lg"
    android:paddingBottom="@dimen/spacing_lg"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <!-- Glowing Sacred Icon -->
    <FrameLayout
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/glass_circle_button">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_om"
            app:tint="@color/gold_light" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_sm"
        android:fontFamily="@font/sanskrit"
        android:text="@string/header"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtNavSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/sanskrit"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/gold_light"
        android:textSize="13sp" />

</LinearLayout>
